<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_temp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/settings"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/settings"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/changeSubDomain"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/sub_domain_b"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="176dp"
        android:layout_marginLeft="5dp" />

    <RelativeLayout
        android:id="@+id/companyLogoView"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner_round_bg"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toEndOf="@+id/changeSubDomain"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="8dp">

        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loginArea"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/form_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/username"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_round_bg"
                android:hint="@string/txtUsername"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/edittext_hint_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/password"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_round_bg"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/textColorWhite"
                android:textColorHint="@color/edittext_hint_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login"
                android:scaleType="fitXY" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_white_round_bg"
                android:gravity="center"
                android:text="@string/txtLogin"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>